# PrismQML

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.en.md  README.md  demo_neo.py  mkdocs.yml  pyproject.toml
.github/workflows/: build-all.yml  docs.yml  ios.yml  release.yml
cpp/: ANDROID.md  CMakeLists.txt  README.md  build.bat  build_android.bat  build_android_apk.bat  build_android_x64.bat  build_apk.bat
cpp/demo/: _imports.qml  main.cpp
cpp/demo/pages/: DataPage.qml  HomePage.qml  ResponsivePage.qml  SettingsPage.qml
cpp/gallery/: main.cpp
cpp/include/prism/: Accessors.h  AcrylicHelper.h  App.h  ClipboardHelper.h  ConfigManager.h  DataModels.h  Icon.h  Logger.h  MicaManager.h  NativeWindow.h  Platform.h  PlatformInfo.h  QRCodeGenerator.h  Registry.h  ScreenEyedropper.h  ShadowManager.h  SingleInstance.h  SqlListModel.h  Store.h  SvgImageProvider.h  SystemTray.h  Theme.h  ThemeManager.h  Updater.h  Window.h  WindowHelper.h
cpp/src/: App.cpp  ConfigManager.cpp  DataModels.cpp  Icon.cpp  Logger.cpp  MicaManager.cpp  NativeWindow.cpp  PlatformInfo.cpp  Providers.cpp  QRCodeGenerator.cpp  Registry.cpp  ScreenEyedropper.cpp  ShadowManager.cpp  SqlListModel.cpp  Store.cpp  SvgImageProvider.cpp  SystemAndInstance.cpp  Theme.cpp  ThemeManager.cpp  Updater.cpp  Window.cpp
cpp/tests/: test_mica.cpp  test_qrcode_gen.cpp  test_sqlmodel.cpp  test_store.cpp  test_system.cpp
cpp/tests/qr/: verify_qr.py
docs/: about.en.md  about.zh.md  cpp-gallery-plan.md  cpp-host-plan.md  getting-started.en.md  getting-started.zh.md  index.en.md  index.zh.md
docs/api/: python.en.md  python.zh.md
docs/components/: badges.en.md  badges.zh.md  buttons.en.md  buttons.zh.md  cards.en.md  cards.zh.md  charts.en.md  charts.zh.md  containers.en.md  containers.zh.md  data.en.md  data.zh.md  dialogs.en.md  dialogs.zh.md  effects.en.md  effects.zh.md  feedback.en.md  feedback.zh.md  icons.en.md  icons.zh.md  index.en.md  index.zh.md  inputs.en.md  inputs.zh.md  menus.en.md  menus.zh.md  navigation.en.md  navigation.zh.md
docs/guide/: config.en.md  config.zh.md  skins.en.md  skins.zh.md  state.en.md  state.zh.md  theming.en.md  theming.zh.md  tray.en.md  tray.zh.md  windows.en.md  windows.zh.md
examples/: main.py  main.qml
examples/pages/: ButtonPage.qml  CardPage.qml  CarouselPage.qml  ChartPage.qml  ContainerPage.qml  EffectsPage.qml  FeedbackPage.qml  IconPage.qml  InputPage.qml  LabelPage.qml  MenuPage.qml  NavigationPage.qml  SettingsPage.qml
examples/resources/: __init__.py  gallery.qrc
fluentqml/: __init__.py
fluentqml/FluentQML/: Enums.qml  NavigationWindowCore.qml  qmldir
fluentqml/FluentQML/FluentEnums/: Constants.qml  Metrics.qml  StateColor.qml  qmldir
fluentqml/FluentQML/_internal/: ContentFrame.qml
fluentqml/FluentQML/effects/: NeoShadow.qml  qmldir
fluentqml/FluentQML/navigation/: NavigationPanelCore.qml
fluentqml/PrismQML/: WindowsCore.qml  qmldir
fluentqml/PrismQML/FluentEnums/: Animation.qml  Backdrop.qml  Badge.qml  Button.qml  CalendarPicker.qml  Carousel.qml  Chart.qml  ColorPicker.qml  CommandBar.qml  Dialog.qml  Flyout.qml  Input.qml  Lang.qml  Notification.qml  Picker.qml  PipsPager.qml  Progress.qml  State.qml  Theme.qml  Tip.qml  Toggle.qml  WindowType.qml
fluentqml/PrismQML/_internal/: CaptionButton.qml  WindowsBar.qml  WindowsFilled.qml  WindowsSplit.qml
fluentqml/PrismQML/effects/: ColorOverlay.qml  OpacityMask.qml  Shadow.qml  ShadowedRectangle.qml  ToggleAnimation.qml
fluentqml/PrismQML/i18n/: de.json  en.json  es.json  it.json  nl.json  ru.json  uk.json
fluentqml/PrismQML/navigation/: NavigationView.qml  NavigationViewItem.qml  StatusBar.qml  ToolBar.qml  qmldir
fluentqml/PrismQML/shaders/: gradient_shadow.frag.qsb
fluentqml/python/core/: __init__.py  incubation.py  notification.py  single_instance.py  theme.py  utils.py
fluentqml/python/models/: sql_list_model.py
fluentqml/python/window/: app.py
prismqml/: __init__.py
prismqml/PrismQML/: DpiManager.qml  Enums.qml  NavigationWindowCore.qml  Translator.qml  Windows.qml  WindowsCore.qml  qmldir
prismqml/PrismQML/FluentEnums/: Animation.qml  Auth.qml  Backdrop.qml  Badge.qml  Button.qml  CalendarPicker.qml  Card.qml  Carousel.qml  Chart.qml  ColorPicker.qml  ComboBox.qml  CommandBar.qml  Constants.qml  Dialog.qml  Flow.qml  Flyout.qml  GradientSlider.qml  Icons.qml  ImageCropper.qml  IndicatorBar.qml  Input.qml  Label.qml  Metrics.qml  Notification.qml  Orient.qml  Picker.qml  PipsPager.qml  Position.qml  Scroll.qml  Separator.qml  SettingsCard.qml  Skeleton.qml  Slider.qml  State.qml  StateColor.qml  StatusLevel.qml  Tab.qml  TeachingTip.qml  Theme.qml  Tip.qml  (+3 more)
prismqml/PrismQML/PrismEnums/: Lang.qml  Orient.qml  Progress.qml  Theme.qml  qmldir
prismqml/PrismQML/_internal/: CaptionButton.qml  ContentFrame.qml  LoadingOverlay.qml  ResizeArea.qml  WindowAnimationHelper.qml  WindowIcon.qml  WindowsBar.qml  WindowsFilled.qml  WindowsSplit.qml
prismqml/PrismQML/effects/: ColorOverlay.qml  GaussianBlur.qml  MatrixRain.qml  NeoShadow.qml  OpacityMask.qml  Shadow.qml  ShadowedRectangle.qml  ToggleAnimation.qml
prismqml/PrismQML/i18n/: ar.json  fr.json  hi.json  id.json  ja.json  ko.json  pl.json  pt.json  th.json  tr.json  vi.json  zh_CN.json  zh_TW.json
prismqml/PrismQML/navigation/: BottomTabBar.qml  NavigationBar.qml  (+9 more)
prismqml/python/: __init__.py
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: copy_all_icons.py  extract_icons.py  extract_translations.py  fps_probe.py  run_with_fps.py  verify_coverage.py
tests/: conftest.py  test_carousel_item_delegate.py  test_config.py  test_config_extended.py  test_core.py  test_providers.py  test_smoke.py  test_updater.py  test_window_buttons.py
tests/qml/: bench_skin_frames.py  probe_all_components.py  probe_neo_skin.py  test_card_autoheight.py  test_flow_layout.qml  test_incubation_controller.py  test_lazy_reload.py  test_lazy_reload_components.py  test_list_widget.qml  test_messagebox_overlay.qml  test_realwindow_lazy_reload.py  test_shortcut_editor.qml  test_splash_default_mount.py  test_splash_timing.py
(+468 files in other folders)
