[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-rust>=1.5"]
build-backend = "setuptools.build_meta"

[project]
# PyPI 分发名为 fqml(pip install fqml);导入名仍为 fluentqml(import fluentqml)
name = "fqml"
version = "0.2.10"
description = "A pure QML-based Fluent Design component library with 120fps+ smooth animations"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "aki-riko"}
]
keywords = ["qml", "fluent", "ui", "pyside6", "qt", "design"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
]
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.5.0",
    "qrcode>=7.0",
]

[project.optional-dependencies]
macos = [
    "pyobjc-framework-Cocoa>=9.0",
]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "maturin>=1.0",  # 构建 fluentqml-rs Rust 加速模块
]
# 可选: Rust 加速 (FluentSqlListModel 自动检测使用)
# 安装: cd rust && maturin build --release && pip install target/wheels/fluentqml_rs-*.whl
rust = [
    "fluentqml-rs>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/aki-riko/FluentQML"
Documentation = "https://github.com/aki-riko/FluentQML#readme"
Repository = "https://github.com/aki-riko/FluentQML"
Issues = "https://github.com/aki-riko/FluentQML/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["fluentqml*"]

[tool.setuptools.package-data]
fluentqml = ["FluentQML/**/*.qml", "FluentQML/**/*.js", "FluentQML/qmldir", "FluentQML/**/qmldir", "FluentQML/**/*.json", "FluentQML/**/*.frag", "**/*.svg", "**/*.png", "**/*.qsb", "py.typed", "FluentQML/controls/icons/fluent/LICENSE"]

# Rust 加速扩展(可选):SqlListModel 的 SQLite 分页加速。
# 编为顶层模块 fluentqml_rs(代码 import fluentqml_rs),abi3 一个 wheel 兼容 py3.9+。
# 编译失败时 SqlListModel 自动回退纯 Python 实现,不影响主功能。
[[tool.setuptools-rust.ext-modules]]
target = "fluentqml_rs"
path = "rust/Cargo.toml"
binding = "PyO3"
py-limited-api = "auto"

# 强制 abi3 wheel(cp39-abi3): 一个 wheel 兼容 py3.9+, 与 Cargo abi3-py39 对齐。
# setuptools-rust 的 py-limited-api="auto" 会读取此处; 不配则退化成 cp3XX 绑死单版本。
[tool.distutils.bdist_wheel]
py-limited-api = "cp39"
