[package]
name = "prismqml_rs"
version = "0.1.0"
edition = "2021"
description = "PrismQML Rust acceleration: SQLite paged fetcher for SqlListModel"
authors = ["aki-riko"]
license = "MIT"

[lib]
name = "prismqml_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
